--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,9 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, repudiandae voluptatum autem ea cumque qui?</p>
             <p>Suscribete y dale like</ p>
         </div>
+        <div class="footer">
+            Hecho con amor en Platzi 💚
+        </div>
     </div>
 </body>
 </html>
